--- a/style.css
+++ b/style.css
@@ -1,163 +1,188 @@
-*{
-	margin:0;
-	padding: 0;
-	font-family: Consolas;
-	color: #fff;
-	text-align: center;
-	transition: 1s;
+/* Import Google Font - Poppins */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
 
-canvas{
-	position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 10px;
+  min-height: 100vh;
+  background: #06283D;
 }
 
-html{
-	width: 100%;
-	height: 100%;
+.container {
+  max-width: 690px;
+  width: 100%;
+  padding: 30px;
+  background: #fff;
+  border-radius: 7px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.01);
 }
 
-body{
-	width: 100%;
-	height: 100%;
-	background-color: #000;
-  
+.wrapper {
+  border-radius: 5px;
+  border: 1px solid #ccc;
 }
 
-
-h2{
-	font-size: 2.5em;
+.wrapper .text-input {
+  display: flex;
+  border-bottom: 1px solid #ccc;
 }
 
-.container{
-	z-index: 1;
-	position: relative;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-
+.text-input .to-text {
+  border-radius: 0px;
+  border-left: 1px solid #ccc;
 }
 
-
-.countdown{
-	margin: auto;
-	width: 70%;
-	padding: 5% 10%;
-	display: flex;
-	justify-content: space-between;
+.text-input textarea {
+  height: 250px;
+  width: 100%;
+  border: none;
+  outline: none;
+  resize: none;
+  background: none;
+  font-size: 18px;
+  padding: 10px 15px;
+  border-radius: 5px;
 }
 
-.countdown div{
-	
-
-	display: flex;
-	flex-direction: column;
-	font-weight: 900;
-	font-size: 2em;
+.text-input textarea::placeholder {
+  color: #b7b6b6;
 }
 
-.countdown div span{
-	font-size: 2.5em;
+.controls,
+li,
+.icons,
+.icons i {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-
-h1{
-	font-size: 60px;
-	transition: 1s;
+.controls {
+  list-style: none;
+  padding: 12px 15px;
 }
 
-h1 span{
-	font-size: 100px;
-	transition: 1s;
+.controls .row .icons {
+  width: 38%;
 }
 
-#cvs{
-	position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    background-color: none;
+.controls .row .icons i {
+  width: 50px;
+  color: #adadad;
+  font-size: 14px;
+  cursor: pointer;
+  transition: transform 0.2s ease;
+  justify-content: center;
 }
 
-@media(max-width: 800px){
-  
-  .countdown div span{
-	font-size: 1.5em;
+.controls .row.from .icons {
+  padding-right: 15px;
+  border-right: 1px solid #ccc;
 }
 
-
- .countdown div{
-	
-
-	display: flex;
-	flex-direction: column;
-	font-weight: 900;
-	font-size: 0.75em;
+.controls .row.to .icons {
+  padding-left: 15px;
+  border-left: 1px solid #ccc;
 }
 
-  h2{
-    font-size: 1.75em;
+.controls .row select {
+  color: #333;
+  border: none;
+  outline: none;
+  font-size: 18px;
+  background: none;
+  padding-left: 5px;
+}
 
+.text-input textarea::-webkit-scrollbar {
+  width: 4px;
+}
 
+.controls .row select::-webkit-scrollbar {
+  width: 8px;
+}
+
+.text-input textarea::-webkit-scrollbar-track,
+.controls .row select::-webkit-scrollbar-track {
+  background: #fff;
+}
+
+.text-input textarea::-webkit-scrollbar-thumb {
+  background: #ddd;
+  border-radius: 8px;
+}
+
+.controls .row select::-webkit-scrollbar-thumb {
+  background: #999;
+  border-radius: 8px;
+  border-right: 2px solid #ffffff;
+}
+
+.controls .exchange {
+  color: #adadad;
+  cursor: pointer;
+  font-size: 16px;
+  transition: transform 0.2s ease;
+}
+
+.controls i:active {
+  transform: scale(0.9);
+}
+
+.container button {
+  width: 100%;
+  padding: 14px;
+  outline: none;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+  margin-top: 20px;
+  font-size: 17px;
+  border-radius: 5px;
+  background: #06283D;
+}
+
+@media (max-width: 660px) {
+  .container {
+    padding: 20px;
   }
 
-}
+  .wrapper .text-input {
+    flex-direction: column;
+  }
 
+  .text-input .to-text {
+    border-left: 0px;
+    border-top: 1px solid #ccc;
+  }
 
+  .text-input textarea {
+    height: 200px;
+  }
 
-/* CSS */
-.button-64 {
-	margin:auto;
-  align-items: center;
-  background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB);
-  border: 0;
-  border-radius: 8px;
-  box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
-  box-sizing: border-box;
-  color: #FFFFFF;
-  display: flex;
-  font-family: Phantomsans, sans-serif;
-  font-size: 20px;
-  justify-content: center;
-  line-height: 1em;
-  max-width: 100%;
-  min-width: 140px;
-  padding: 3px;
-  text-decoration: none;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  white-space: nowrap;
-  cursor: pointer;
-}
+  .controls .row .icons {
+    display: none;
+  }
 
-.button-64:active,
-.button-64:hover {
-  outline: 0;
-}
+  .container button {
+    padding: 13px;
+    font-size: 16px;
+  }
 
-.button-64 span {
-  background-color: rgb(5, 6, 45);
-  padding: 16px 24px;
-  border-radius: 6px;
-  width: 100%;
-  height: 100%;
-  transition: 300ms;
-}
+  .controls .row select {
+    font-size: 16px;
+  }
 
-.button-64:hover span {
-  background: none;
-}
-
-@media (min-width: 768px) {
-  .button-64 {
-    font-size: 24px;
-    min-width: 196px;
+  .controls .exchange {
+    font-size: 14px;
   }
 }
